# BitWipers

./: .gitignore  CI_CD_FIXES.md  CONTRIBUTING.md  DEPLOYMENT.md  HOW_TO_RUN.md  LICENSE  QUICK_START_GITHUB.md  README.md  WARP.md  WORKFLOW_FIX.md  push_to_github.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: README.md  basic-check.yml  ci-simple.yml  ci.yml
src/bitwipers/: __init__.py  main.py
src/bitwipers/cli/: __init__.py  main.py
src/bitwipers/core/: __init__.py  patterns.py  wiper.py
src/bitwipers/crypto/: __init__.py  certificate.py
src/bitwipers/gui/: __init__.py  main_window.py
src/bitwipers/utils/: __init__.py  device_detector.py  logger.py
tests/: __init__.py  conftest.py  test_basic.py  test_patterns.py  test_wiper.py
website/: README.md  index.html  script.js  styles.css
website/images/: SCREENSHOTS_GUIDE.md  placeholder-generator.html
